<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name of the app -->
    <string name="app_name">Court Counter</string>
    <!-- Label for home team score -->
    <string name="home_hint">Home</string>
    <!-- Starting home team score -->
    <string name="hScore">0</string>
    <!-- Label for 3 point button -->
    <string name="threePoint">+3 Points</string>
    <!-- Label for 2 point button -->
    <string name="twoPoint">+2 Points</string>
    <!-- Label for free throw button -->
    <string name="freeThrow">Free Throw</string>
    <!-- Label for visitor team score -->
    <string name="visitor_hint">Visitor</string>
    <!-- Starting visior team score -->
    <string name="vScore">0</string>
    <!-- Label for reset button -->
    <string name="reset">Reset</string>
    <!-- Label for share button -->
    <string name="share">Share</string>
    <!-- Label for settings menu option -->
    <string name="action_settings">Settings</string>
    <!-- Subject line for sharing message -->
    <string name="share_subject">Here are the scores for tonight\'s game.</string>
    <!-- First part of body of sharing scores, ex: Home: 92 -->
    <string name="share_body1"><xliff:g id="home_name" example="Home">%s</xliff:g>: <xliff:g id="home_score" example="92">%d</xliff:g></string>
    <!-- Second part of body of sharing scores, ex: Visitor: 80 -->
    <string name="share_body2"><xliff:g id="visitor_name" example="Visitor">%s</xliff:g>: <xliff:g id="visitor_score" example="80">%d</xliff:g></string>
    <!-- Generic "Home" team name -->
    <string name="generic_home">Home</string>
    <!-- Generic "Visitor" team name -->
    <string name="generic_visitor">Visitor</string>
    <!-- Toast message if no sharing app found -->
    <string name="share_error">No application found for sharing.</string>

</resources>
